# events-face

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml
src/: .env.example  urls.py
src/accounts/: serializers.py  urls.py  views.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
src/events/management/commands/: worker.py
src/events/migrations/: 0001_initial.py  0002_outboxmessage_registration.py  0003_alter_registration_email.py
src/sync/: models.py  services.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
